<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="65dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            card_view:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/recipe_img"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop" />

        </android.support.v7.widget.CardView>
    </FrameLayout>
    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="250dp"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/recipe_name"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_700"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/recipe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/grey_500"
                android:textSize="16sp" />
            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/tag_group"
                style="@style/TagGroup.custom" />
            <TextView
                android:id="@+id/ingredientsListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_700"
                android:paddingTop="15dp"
                android:paddingBottom="20dp"
                android:text="@string/ingredients"
                android:textSize="20sp" />
            <ListView
                android:layout_margin="0dp"
                android:padding="0dp"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:id="@+id/ingredientsListView"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/shoppingList"
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/shoppingList"
                android:textColor="@color/textColorPrimary"
                app:backgroundTint="@color/colorPrimaryDark" />
            <TextView
                android:id="@+id/StepsListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_700"
                android:paddingTop="15dp"
                android:paddingBottom="20dp"
                android:text="@string/steps"
                android:textSize="20sp" />
            <ListView
                android:layout_margin="0dp"
                android:padding="0dp"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:id="@+id/steptsListView"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </FrameLayout>

    </android.support.design.widget.CoordinatorLayout>
</ScrollView>